@@ -12,10 +12,11 @@ class ImageView(BrowserView):
     implements(IImageView)
 
     img = None
+    field = None
 
-    def display(self, scalename='thumb'):
-        """ Return a bool if the scale should be displayed
-        """
+    def __init__(self, context, request):
+        super(ImageView, self).__init__(context, request)
+
         here = '/'.join(self.context.getPhysicalPath())
         results = self.context.portal_catalog.queryCatalog(
                 {
@@ -33,12 +34,28 @@ class ImageView(BrowserView):
             self.has_images = True
             self.img = results[0].getObject()
             self.field = self.img.getField('image')
+
+    def display(self, scalename='thumb'):
+        """ Return a bool if the scale should be displayed
+        """
         if not self.has_images:
             return False
-        return (self.field != None) and \
-                    bool(self.field.getScale(self.img, scalename))
+
+        #in some cases the scale cannot be correctly retrieved. 
+        #We return the whole image then
+
+        if self.field is None:
+            return False
+
+        return True
 
     def __call__(self, scalename='thumb'):
         if not self.display(scalename):
             raise NotFound(self.request, self.name)
-        return self.field.getScale(self.img, scale=scalename)
+
+        scale = self.field.getScale(self.img, scalename)
+        if scale:
+            return scale
+
+        #returning the entire image
+        return self.field.get(self.img).__of__(self.img)
